website/versioned_docs/version-0.19.0/more/css.mdx
---
title: 'CSS'
---

&lt;TODO&gt;

A proposal for integrated CSS support can be found here:
[https://github.com/yewstack/yew/issues/533](https://github.com/yewstack/yew/issues/533)

This contains a lot of discussion about how to best integrate CSS support into Yew.

Currently, the approach we've adopted is to encourage developers to build a number of systems, before
adopting the most popular one.

The community are currently developing a number of projects to make it easy to add styles to
projects. A few are given below:

#### Component Libraries

-   [yew_styles](https://github.com/spielrs/yew_styles) - A styling framework for Yew without any JavaScript dependencies.
-   [yew-mdc](https://github.com/Follpvosten/yew-mdc) - Material Design Components.
-   [muicss-yew](https://github.com/AlephAlpha/muicss-yew) - MUI CSS Components.
-   [Yewtify](https://github.com/yewstack/yewtify) – Implements the features provided by the Vuetify framework in Yew.

#### Styling Solutions

-   [stylist](https://github.com/futursolo/stylist-rs) - A CSS-in-Rust styling solution for WebAssembly Applications.

:::important contribute
If you're developing a project adding styles to Yew please submit a PR adding yourself to this list!

[Link to the file containing the list](https://github.com/yewstack/yew/blob/master/website/docs/more/css.mdx).
:::
